package(default_visibility = ["//visibility:public"])

COMMON_SRCS = [
    "src/os_transport.c",
    "src/os_transport_thread_pool.c",
    "src/os_transport_urma.c",
    "src/os_transport_log.c",
]

COMMON_COPTS = [
    "-std=c99",
    "-Wall",
    "-Wextra",
    "-O2",
    "-fPIC",
    "-Wno-implicit-function-declaration",
    "-D_POSIX_C_SOURCE=200809L",
]

cc_library(
    name = "os_transport_hdrs",
    hdrs = glob(["include/*.h"]),
    includes = ["include"],
)

cc_library(
    name = "os_transport_prefixed_hdrs",
    hdrs = glob(["include/*.h"]),
    strip_include_prefix = "include",
    include_prefix = "os-transport",
)

cc_library(
    name = "os_transport_lib",
    srcs = COMMON_SRCS,
    hdrs = glob(["include/*.h"]),
    copts = COMMON_COPTS,
    includes = ["include"],
    deps = [
        ":os_transport_hdrs",
        "@local_urma//:urma",
    ],
    linkopts = [
        "-lpthread",
    ],
)

cc_binary(
    name = "libos_transport.so",
    srcs = COMMON_SRCS,
    copts = COMMON_COPTS + ["-Iinclude"],
    linkshared = True,
    deps = [
        ":os_transport_hdrs",
        "@local_urma//:urma",
    ],
    linkopts = [
        "-lpthread",
    ],
)

cc_test(
    name = "test_thread_pool",
    srcs = [
        "test/test_thread_pool.c",
        "src/os_transport_thread_pool.c",
    ],
    copts = COMMON_COPTS + ["-DTEST_MODE"],
    includes = ["include"],
    linkopts = ["-lpthread"],
    deps = [":os_transport_hdrs"],
)

cc_test(
    name = "test_os_transport_unit",
    srcs = [
        "test/test_os_transport_unit.c",
    ],
    copts = COMMON_COPTS,
    includes = [
        "include",
        "src",
    ],
    linkopts = ["-lpthread"],
    deps = [":os_transport_hdrs"],
)